fixed a bug where the modal wouldn't scroll if the content overflowed the viewport

--- a/_lib/solid-components/_modals.scss
+++ b/_lib/solid-components/_modals.scss
@@ -15,6 +15,8 @@
   opacity: 0;
   visibility: hidden;
   transition: all .2s;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 
